--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -20,7 +20,7 @@
 }
 
 .icons {
-    @include flexy($just: center);
+    @include flexy($just: center, $align: center);
     &-svg {
         cursor: pointer;
         padding: 10px;
