--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -14,6 +14,7 @@
 
     .desktopnav {
         @include flexy();
+        margin-right: 4rem;
         li {
             padding: 0 1rem;
             list-style: none;
