--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -4,6 +4,7 @@
 
 // Colors
 
+$earth-green: #758b72;
 $mint: #58e1c1;
 $aqua: #52bab3;
 $mario: #5db1ad;
